CMAKE_MINIMUM_REQUIRED(VERSION 2.4)
IF(COMMAND CMAKE_POLICY)
	CMAKE_POLICY(SET CMP0003 NEW)
ENDIF(COMMAND CMAKE_POLICY)

PROJECT(Vaa3D_Plugins)

FIND_PACKAGE(Qt4 REQUIRED)
INCLUDE(${QT_USE_FILE})

FIND_PATH(V3D_BINARY_DIR v3d)
SET(INSTALLATION_DIRECTORY "${V3D_BINARY_DIR}/plugins/vaa3d_plugins")

FIND_PATH(V3D_BASIC_C_FUN_SOURCE_DIR v3d_interface.h)
IF(V3D_BASIC_C_FUN_SOURCE_DIR)
	SET(V3D_BASIC_C_FUN_BINARY_DIR "${PROJECT_BINARY_DID}/Source/basic_c_fun")
	INCLUDE_DIRECTORIES(BEFORE "${V3D_BASIC_C_FUN_SOURCE_DIR}../common_lib/include")
	INCLUDE_DIRECTORIES(${V3D_BASIC_C_FUN_SOURCE_DIR})
ENDIF(V3D_BASIC_C_FUN_SOURCE_DIR)

IF(NOT LIBRARY_OUTPUT_PATH)
	SET(LIBRARY_OUTPUT_PATH
		${PROJECT_BINARY_DID}/bin
		CACHE INTERNAL "Output directory for shared libraries")
ENDIF(NOT LIBRARY_OUTPUT_PATH)

INCLUDE(${PROJECT_SOURCE_DIR}/CMake/PluginConfiguration.cmake)

ADD_SUBDIRECTORY(src)
